--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
       run: rustc --version && cargo --version
 
     - name: Run tests
-      run: cargo test --workspace
+      run: RUSTFLAGS="-D warnings" cargo test --workspace
