--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.6"
 authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
 edition = "2018"
 keywords = ["texture", "atlas", "bin", "box", "packer"]
-description = "A minimal bin packer designed to conform to any two or three dimensional use case."
+description = "A general purpose, deterministic bin packer designed to conform to any two or three dimensional use case."
 license = "MIT/Apache-2.0"
 repository = "https://github.com/chinedufn/rectangle-pack"
